--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@iconify/vue": "^5.0.0",
@@ -25,6 +26,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-vue": "~10.4.0",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "prettier": "3.6.2",
